fix(BazarTable): be able to delete pages

--- a/config.yaml
+++ b/config.yaml
@@ -7,6 +7,9 @@ services:
     autowire: true
     public: true
 
+  YesWiki\Tabdyn\Controller\:
+    resource: 'controllers/*'
+
   YesWiki\Tabdyn\Service\:
     resource: 'services/*'
 
